added R Markdown article

--- a/dashboard_report_visualization/r_markdown/Displaying-Code-using-R-Markdown_95650110.html
+++ b/dashboard_report_visualization/r_markdown/Displaying-Code-using-R-Markdown_95650110.html
@@ -10,16 +10,9 @@
         <div id="page">
             <div id="main" class="aui-page-panel">
                 <div id="main-header">
-                    <div id="breadcrumb-section">
-                        <ol id="breadcrumbs">
-                            <li class="first">
-                                <span><a href="index.html">Chia, Jonathan</a></span>
-                            </li>
-                                                </ol>
-                    </div>
                     <h1 id="title-heading" class="pagetitle">
                                                 <span id="title-text">
-                            Chia, Jonathan : Displaying Code using R Markdown
+                            Displaying Code using R Markdown
                         </span>
                     </h1>
                 </div>
